--- a/assets/contact information/index.html
+++ b/assets/contact information/index.html
@@ -8,7 +8,7 @@
         <h1> Contact Information</h1> 
         <hr/>
 
-        <p> Address=  Roman Wall 23-233, Leicester, United Kingdom<br/>
+        <p> Address=  Pune,India<br/>
         Phone number= 9107349624 <br/>
         Email id = manasipatil@gmail.com
 </p>
